--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <a class="blue-a" href="https://locate.apple.com/in/en/"
           >Find a retailer</a
         >
-        near you. Or call 000800 040 1966.
+        near you. Or call +91 6382230142.
       </p>
       <hr class="hidden_mobile" />
       <div class="flex-bottom">
